--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:07 PM</td>
+            <td data-label="Incident">Chest Pain</td>
+            <td data-label="Street Name">CEDAR LN</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">WOODLAND DR (0.1 miles) and OAKWOOD DR (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:56 PM</td>
             <td data-label="Incident">Property Damage</td>
             <td data-label="Street Name">SMOOT AVE</td>
