--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">07:21 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Abdominal</td>
             <td data-label="Street Name">PHIPPS AVE</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">FOURTH ST (0.1 miles) and THIRD ST (126.7 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
