--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">TONEYS FORK RD</td>
             <td data-label="City">PEYTONA</td>
             <td data-label="Cross Streets">LAFFERTY HOLLOW RD (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
