--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">LOWER WHITEOAK RD</td>
             <td data-label="City">ASHFORD</td>
             <td data-label="Cross Streets">BENTWOOD LN (0.3 miles) and BARN HOLLOW RD (0.4 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Racine VFD, Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
