--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:23 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">CEDAR LN</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">WOODLAND DR (0.1 miles) and OAKWOOD DR (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:23 AM</td>
             <td data-label="Incident">Stolen Vehicle</td>
             <td data-label="Street Name">TONEYS FORK RD</td>
