--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">MEADOW FORK RD</td>
             <td data-label="City">HEWETT</td>
-            <td data-label="Cross Streets">MIKES FORK RD (0.3 miles) and KIRK LN (0.3 miles)</td>
+            <td data-label="Cross Streets">KIRK LN (0.3 miles) and MIKES FORK RD (0.3 miles)</td>
             <td data-label="Responding Agencies"></td>
           </tr>
         
