--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">DANIEL BOONE PKWY</td>
             <td data-label="City">FOSTER</td>
             <td data-label="Cross Streets">WHITTEN SPRING RD (137.4 feet) and DRAWDY TOWER RD (0.4 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
