--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:20 PM</td>
+            <td data-label="Incident">Sick</td>
+            <td data-label="Street Name">MADISON AVE</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">LEE AVE (0.1 miles) and PALMER PL (0.2 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:50 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">TURNER HOLLOW RD</td>
