--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">TURNER HOLLOW RD</td>
             <td data-label="City">RIDGEVIEW</td>
             <td data-label="Cross Streets">RIDGEVIEW NELLIS RD (0.3 miles)</td>
-            <td data-label="Responding Agencies">Racine VFD, Whitesville EMS</td>
+            <td data-label="Responding Agencies">Racine VFD, Whitesville EMS, WV State Police</td>
           </tr>
         
             </tbody>
