--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">05:07 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">SPARS CREEK RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">CARDINAL LN (0.1 miles) and SHEETS LN (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
