--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:55 PM</td>
+            <td data-label="Incident">Theft</td>
+            <td data-label="Street Name">ELLIS FORK RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">FERRELL BR (0.2 miles) and BAISDEN FORK RD (0.7 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:07 PM</td>
             <td data-label="Incident">Emotion Dist Person</td>
             <td data-label="Street Name">SPARS CREEK RD</td>
