--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">ELLIS FORK RD</td>
             <td data-label="City">CHAPMANVILLE</td>
             <td data-label="Cross Streets">FERRELL BR (0.2 miles) and BAISDEN FORK RD (0.7 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
