--- a/index.html
+++ b/index.html
@@ -154,17 +154,8 @@
             <td data-label="Incident">Search & Rescue</td>
             <td data-label="Street Name">GORE HOLLOW RD</td>
             <td data-label="City">PEYTONA</td>
-            <td data-label="Cross Streets">GORE HOLLOW RD (49.7 feet)</td>
+            <td data-label="Cross Streets">MIDDLE WHITEOAK RD (0.2 miles)</td>
             <td data-label="Responding Agencies">Racine VFD, WV State Police</td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">06:55 PM</td>
-            <td data-label="Incident">Theft</td>
-            <td data-label="Street Name">ELLIS FORK RD</td>
-            <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets">FERRELL BR (0.2 miles) and BAISDEN FORK RD (0.7 miles)</td>
-            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
             </tbody>
