--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">STATE ST</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">AVE C (33.3 feet) and BENJAMIN PRICE BRIDGE RD (0.3 miles)</td>
-            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Van VFD, AEP, Madison PD</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD, Van VFD, AEP, Boone County Ambulance Authority, Madison PD</td>
           </tr>
         
           <tr>
