--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">08:23 PM</td>
+            <td data-label="Incident">Burglary</td>
+            <td data-label="Street Name">JULIAN RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">LITTLE HORSE CREEK RD (0.2 miles) and CHARLOTTE LN (0.2 miles)</td>
+            <td data-label="Responding Agencies">WV State Police</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:55 PM</td>
             <td data-label="Incident">Fire - Electrical</td>
             <td data-label="Street Name">STATE ST</td>
