--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:26 PM</td>
+            <td data-label="Incident">Fire - Smoke</td>
+            <td data-label="Street Name">STATE ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets">AVE C (33.3 feet) and BENJAMIN PRICE BRIDGE RD (0.3 miles)</td>
+            <td data-label="Responding Agencies">Danville VFD, Madison VFD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:30 PM</td>
             <td data-label="Incident">Domestic Violence</td>
             <td data-label="Street Name">TRUIST BANK</td>
