--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:53 PM</td>
+            <td data-label="Incident">Chest Pain</td>
+            <td data-label="Street Name">LICK CREEK RD</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">FREEMONT LN (82.8 feet) and WISEMAN LN (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:30 PM</td>
             <td data-label="Incident">Gas Leak</td>
             <td data-label="Street Name">CANTLEY BRANCH RD</td>
