--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">JOHNS HOLLOW RD</td>
             <td data-label="City">NELLIS</td>
             <td data-label="Cross Streets">PINEWOOD DR (46.8 feet)</td>
-            <td data-label="Responding Agencies">WV State Police</td>
+            <td data-label="Responding Agencies">Racine VFD, WV State Police</td>
           </tr>
         
             </tbody>
