--- a/index.html
+++ b/index.html
@@ -155,16 +155,7 @@
             <td data-label="Street Name">BARKER CEMETERY RD</td>
             <td data-label="City">ASHFORD</td>
             <td data-label="Cross Streets">EMMONS RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
-          </tr>
-        
-          <tr>
-            <td data-label="Time Reported">08:29 AM</td>
-            <td data-label="Incident">EMS Pager Test</td>
-            <td data-label="Street Name">SMOOT AVE</td>
-            <td data-label="City">DANVILLE</td>
-            <td data-label="Cross Streets">NOLBERT ST (61.0 feet) and BROAD ST (0.2 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
