--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">BARKER CEMETERY RD</td>
             <td data-label="City">ASHFORD</td>
             <td data-label="Cross Streets">EMMONS RD (0.1 miles)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority, Boone County Sheriff's Office</td>
+            <td data-label="Responding Agencies">Racine VFD, Boone County Ambulance Authority, Boone County Sheriff's Office</td>
           </tr>
         
             </tbody>
