--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">UPPER BIGSON RD</td>
             <td data-label="City">VAN</td>
             <td data-label="Cross Streets">EMMA THOMPSON ADDITION RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
             </tbody>
