--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">SPRUCE RIVER RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">KENNEDY DR (0.1 miles) and LOW GAP RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
