--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">ASHFORD NELLIS RD</td>
             <td data-label="City">ASHFORD</td>
             <td data-label="Cross Streets">GATLIN LN (49.1 feet) and BOBCAT LN (76.1 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
