--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:48 PM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">PRENTER RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">OSBORNE LN (0.2 miles) and REFUSE RD (1.0 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">04:47 PM</td>
             <td data-label="Incident">Pain</td>
             <td data-label="Street Name">DANIEL BOONE PKWY</td>
