--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:38 PM</td>
+            <td data-label="Incident">Bleeding</td>
+            <td data-label="Street Name">VISTA DR</td>
+            <td data-label="City">RACINE</td>
+            <td data-label="Cross Streets">STEPHENSON AVE (0.1 miles) and VINE DR (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:56 PM</td>
             <td data-label="Incident">Domestic Non-Violent</td>
             <td data-label="Street Name">COAL RIVER RD</td>
