--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">06:48 PM</td>
+            <td data-label="Incident">Fall</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">WHITESVILLE</td>
+            <td data-label="Cross Streets">HARLESS AVE (154.1 feet) and HOWELL AVE (237.3 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">06:38 PM</td>
             <td data-label="Incident">Bleeding</td>
             <td data-label="Street Name">VISTA DR</td>
