--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">WHITESVILLE</td>
             <td data-label="Cross Streets">HARLESS AVE (154.1 feet) and HOWELL AVE (237.3 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
