--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">YATES LN</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">LICK CREEK RD (234.9 feet)</td>
-            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+            <td data-label="Responding Agencies">Danville VFD, Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
