--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <td data-label="Street Name">BOONE AVE</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">JOSEPHINE AVE (57.3 feet)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
