--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">11:26 PM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Fall</td>
             <td data-label="Street Name">SENG CREEK RD</td>
             <td data-label="City">WHITESVILLE</td>
             <td data-label="Cross Streets">IDLEWOOD LN (217.1 feet) and PRIDE LN (0.3 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Whitesville EMS</td>
           </tr>
         
             </tbody>
