--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td data-label="Street Name">SENG CREEK RD</td>
             <td data-label="City">WHITESVILLE</td>
             <td data-label="Cross Streets">IDLEWOOD LN (217.1 feet) and PRIDE LN (0.3 miles)</td>
-            <td data-label="Responding Agencies">Whitesville EMS</td>
+            <td data-label="Responding Agencies">Whitesville VFD, Whitesville EMS</td>
           </tr>
         
             </tbody>
