--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:41 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">COAL RIVER RD</td>
+            <td data-label="City">SETH</td>
+            <td data-label="Cross Streets">TRENT LN (0.1 miles) and SUSAN DR (0.4 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">11:26 PM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">SENG CREEK RD</td>
