--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">02:41 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">SETH</td>
             <td data-label="Cross Streets">TRENT LN (0.1 miles) and SUSAN DR (0.4 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
           </tr>
         
           <tr>
