--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               
           <tr>
             <td data-label="Time Reported">11:30 AM</td>
-            <td data-label="Incident"></td>
+            <td data-label="Incident">Domestic Violence</td>
             <td data-label="Street Name">POND FORK RD</td>
             <td data-label="City">MADISON</td>
             <td data-label="Cross Streets">GRIFFITHS BRANCH RD (0.3 miles) and PRICE CEMETERY RD (0.3 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
