--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">12:27 PM</td>
+            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Street Name">HUBERT HILL RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (48.0 feet) and EMERY LN (0.5 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:02 PM</td>
             <td data-label="Incident">Transport Back to Residence</td>
             <td data-label="Street Name">MACCORKLE AVE</td>
