--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">12:27 PM</td>
             <td data-label="Incident">MVC - No Injury</td>
-            <td data-label="Street Name">HUBERT HILL RD</td>
+            <td data-label="Street Name">ROBERT C BYRD FWY NB</td>
             <td data-label="City">CHAPMANVILLE</td>
-            <td data-label="Cross Streets">ROBERT C BYRD FWY SB (48.0 feet) and EMERY LN (0.5 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
           </tr>
         
           <tr>
