--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">01:50 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">DUKE LN</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">BIAS BRANCH RD (221.1 feet)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">12:56 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">COSTA RD</td>
