--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">02:58 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">AKERS LN</td>
+            <td data-label="City">JEFFREY</td>
+            <td data-label="Cross Streets">ELIZA BIAS DR (237.3 feet)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:41 PM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">LICK CREEK RD</td>
