--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">04:22 PM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">CAMP CREEK RD</td>
+            <td data-label="City">JULIAN</td>
+            <td data-label="Cross Streets">HULL LN (0.1 miles) and SOVILLE RD (0.1 miles)</td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">02:58 PM</td>
             <td data-label="Incident">Difficulty Breathing</td>
             <td data-label="Street Name">AKERS LN</td>
