--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
         
           <tr>
             <td data-label="Time Reported">04:44 PM</td>
-            <td data-label="Incident">Theft</td>
+            <td data-label="Incident">Property Damage</td>
             <td data-label="Street Name">UPPER RIVER RD</td>
             <td data-label="City">DANVILLE</td>
             <td data-label="Cross Streets">BIG BRANCH RD (0.1 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Responding Agencies">WV State Police</td>
           </tr>
         
           <tr>
