--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
           <tr>
             <td data-label="Time Reported">05:16 PM</td>
             <td data-label="Incident">Suspicious Person</td>
-            <td data-label="Street Name">PRENTER RD</td>
+            <td data-label="Street Name">COAL RIVER RD</td>
             <td data-label="City">SETH</td>
-            <td data-label="Cross Streets">OSBORNE LN (43.9 feet) and WILLIAMS HILL RD (0.3 miles)</td>
-            <td data-label="Responding Agencies"></td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office, WV State Police</td>
           </tr>
         
           <tr>
