--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">05:40 PM</td>
+            <td data-label="Incident">Difficulty Breathing</td>
+            <td data-label="Street Name">4TH STREET</td>
+            <td data-label="City">DANVILLE</td>
+            <td data-label="Cross Streets">FOURTH ST (0.0 miles) and ADKINS ST (0.1 miles)</td>
+            <td data-label="Responding Agencies">Boone County Ambulance Authority</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">05:16 PM</td>
             <td data-label="Incident">Suspicious Person</td>
             <td data-label="Street Name">COAL RIVER RD</td>
