--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">07:12 PM</td>
+            <td data-label="Incident">Arrest</td>
+            <td data-label="Street Name">NORTH FORK RD</td>
+            <td data-label="City">CHAPMANVILLE</td>
+            <td data-label="Cross Streets">ELLIS FORK RD (179.6 feet) and RYAN DR (0.4 miles)</td>
+            <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">07:06 PM</td>
             <td data-label="Incident">Arrest</td>
             <td data-label="Street Name">DUNLAP ST</td>
