--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:49 AM</td>
+            <td data-label="Incident">MVC - No Injury</td>
+            <td data-label="Street Name">MAIN ST</td>
+            <td data-label="City">MADISON</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies">Madison PD</td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:32 AM</td>
             <td data-label="Incident">Fall</td>
             <td data-label="Street Name">CAMP CREEK RD</td>
