--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">10:57 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">SPRUCE RIVER RD</td>
+            <td data-label="City">HADDLETON</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:49 AM</td>
             <td data-label="Incident">MVC - No Injury</td>
             <td data-label="Street Name">MAIN ST</td>
