--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
             <tbody>
               
           <tr>
+            <td data-label="Time Reported">11:06 AM</td>
+            <td data-label="Incident"></td>
+            <td data-label="Street Name">NESTER LN</td>
+            <td data-label="City">ANDREW</td>
+            <td data-label="Cross Streets"></td>
+            <td data-label="Responding Agencies"></td>
+          </tr>
+        
+          <tr>
             <td data-label="Time Reported">10:57 AM</td>
             <td data-label="Incident">Sick</td>
             <td data-label="Street Name">SPRUCE RIVER RD</td>
