--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             <tbody>
               
           <tr>
-            <td data-label="Time Reported">11:16 AM</td>
+            <td data-label="Time Reported">11:27 AM</td>
             <td data-label="Incident">Attempt to Serve</td>
-            <td data-label="Street Name">WHITE BUCK RD</td>
+            <td data-label="Street Name">CAMP CREEK RD</td>
             <td data-label="City">CAMP CREEK</td>
             <td data-label="Cross Streets"></td>
             <td data-label="Responding Agencies">Boone County Sheriff's Office</td>
